[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sceens/LoginPage.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sceens/RegisterPage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sceens/MatchmakingPage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/MySingleton.gd" type="Script" id=4]
[ext_resource path="res://SpaceParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sceens/GameplayPage.tscn" type="PackedScene" id=6]
[ext_resource path="res://SFX/bgloopOGG-8bit.ogg" type="AudioStream" id=7]
[ext_resource path="res://Shaders/chromatize.shader" type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 8 )
shader_param/offset = 0.0

[node name="MyRoot" type="Node"]
script = ExtResource( 4 )

[node name="SpaceParticle" parent="." instance=ExtResource( 5 )]
position = Vector2( 512, 300 )

[node name="LoginPage" parent="." instance=ExtResource( 1 )]

[node name="RegisterPage" parent="." instance=ExtResource( 2 )]
visible = false

[node name="MatchmakingPage" parent="." instance=ExtResource( 3 )]
visible = false

[node name="GameplayPage" parent="." instance=ExtResource( 6 )]
visible = false

[node name="bgmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -34.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
